Fix table vertical-align and css syntax error

--- a/asset/css/seest.css
+++ b/asset/css/seest.css
@@ -17,7 +17,7 @@
 }
 
 h2 {
-    font-size 1.25rem;
+    font-size: 1.25rem;
     font-weight: bold;
 }
 
@@ -95,7 +95,7 @@ hr {
 
 table {
     margin: 0.4rem 0.5rem;
-    vertical-align: center;
+    vertical-align: middle;
 }
 
 td {
